--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,12 +2,15 @@ require:
   - rubocop-performance
   - rubocop-rails
   - rubocop-minitest
-
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 2.5
   TargetRailsVersion: 6.0
   Exclude:
+    - 'extras/**/*'
+    - 'locale/**/*'
     - 'node_modules/**/*'
+    - 'vendor/bundle/**/*'
 
 Layout/ArgumentAlignment:
   EnforcedStyle: with_fixed_indentation
