--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,8 @@
 [main]
 host = https://www.transifex.com
 
-[foreman.foreman_plugin_template]
-file_filter = locale/<lang>/foreman_plugin_template.edit.po
-source_file = locale/foreman_plugin_template.pot
+[foreman.foreman_gce]
+file_filter = locale/<lang>/foreman_gce.edit.po
+source_file = locale/foreman_gce.pot
 source_lang = en
 type = PO
