--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foreman_plugin_template",
+  "name": "foreman_gce",
   "version": "1.0.0",
   "description": "DESCRIPTION",
   "main": "index.js",
@@ -15,10 +15,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/theforeman/foreman_plugin_template.git"
+    "url": "git+https://github.com/theforeman/foreman_gce.git"
   },
   "bugs": {
-    "url": "http://projects.theforeman.org/projects/foreman_plugin_template/issues"
+    "url": "http://projects.theforeman.org/projects/foreman_gce/issues"
   },
   "peerDependencies": {
     "@theforeman/vendor": ">= 6.0.0"
