--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "http://projects.theforeman.org/projects/foreman_google/issues"
   },
   "peerDependencies": {
-    "@theforeman/vendor": ">= 6.0.0"
+    "@theforeman/vendor": ">= 8.16.0"
   },
   "dependencies": {
     "react-intl": "^2.8.0"
@@ -29,12 +29,12 @@
   "devDependencies": {
     "@babel/core": "^7.7.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@theforeman/builder": "^6.0.0",
-    "@theforeman/eslint-plugin-foreman": "6.0.0",
-    "@theforeman/find-foreman": "^4.8.0",
-    "@theforeman/stories": "^7.0.0",
-    "@theforeman/test": "^8.0.0",
-    "@theforeman/vendor-dev": "^6.0.0",
+    "@theforeman/builder": "^10.0",
+    "@theforeman/eslint-plugin-foreman": "^10.0",
+    "@theforeman/find-foreman": "^10.0",
+    "@theforeman/stories": "^10.0",
+    "@theforeman/test": "^10.0",
+    "@theforeman/vendor-dev": "^10.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "prettier": "^1.19.1",
